use powertools for config requests
